--- a/src/components/sections/Feature.astro
+++ b/src/components/sections/Feature.astro
@@ -18,7 +18,7 @@ const { id, imageUrl, imageAlt, reverse = false } = Astro.props as Props;
     >
       <div class="w-full md:w-1/2 mb-8 md:mb-0 max-w-lg">
         <h2
-          class={`text-2xl md:text-3xl lg:text-4xl font-bold mb-4 ${reverse ? 'text-matisse' : 'text-hippie-blue'}`}
+          class="text-2xl md:text-3xl lg:text-4xl font-bold mb-4 text-matisse"
         >
           <slot name="heading" />
         </h2>
@@ -31,7 +31,7 @@ const { id, imageUrl, imageAlt, reverse = false } = Astro.props as Props;
           <img
             src={imageUrl}
             alt={imageAlt}
-            class="max-w-xs md:max-w-sm lg:max-w-md w-full h-full aspect-square px-8"
+            class="max-w-xs md:max-w-sm lg:max-w-md w-full h-full aspect-square"
           />
         )}
       </div>
