--- a/src/components/sections/CallToAction.astro
+++ b/src/components/sections/CallToAction.astro
@@ -1,31 +1,27 @@
 ---
-// Define the interface for component props
 interface Props {
-  id?: string;
-  imageUrl?: string;
-  imageAlt?: string;
-  buttonText?: string;
-  buttonLink?: string;
+  id: string;
+  buttonText: string;
+  buttonLink: string;
 }
-const { id, imageUrl, imageAlt, buttonText, buttonLink } = Astro.props as Props;
+
+const { id, buttonText, buttonLink } = Astro.props as Props;
 ---
 
 <section
-  class="container mx-auto px-4 py-12 md:py-24 flex flex-wrap-reverse md:flex-wrap items-center md:min-h-full" id={id}
+  class="bg-matisse text-white py-12 md:py-24"
+  id={id}
 >
-  <div class="w-full md:w-1/2 flex justify-center mb-8 md:mb-0">
-    <img src={imageUrl} alt={imageAlt} loading="lazy" class="max-w-xs md:max-w-sm lg:max-w-md w-full h-full aspect-square px-6" />
-  </div>
-  <div class="w-full md:w-1/2 text-center md:text-left text-matisse max-w-xl pb-12 md:py-0">
-    <h1 class="text-3xl md:text-4xl lg:text-5xl font-bold mb-6">
-      <slot name="header" /> <!-- Allows for custom header content -->
+  <div class="container mx-auto px-4 text-center max-w-xl">
+    <h1 class="text-3xl md:text-4xl lg:text-5xl font-display uppercase mb-6">
+      <slot name="header" />
     </h1>
-    <p class="text-xl md:text-2xl mb-8 text-rhino">
-      <slot /> <!-- Primary slot for paragraph or main content -->
+    <p class="text-xl md:text-2xl mb-8">
+      <slot />
     </p>
     <a
       href={buttonLink}
-      class="inline-block bg-matisse text-white text-bold text-lg md:text-xl font-bold py-2 px-6 rounded-full hover:bg-apricot transition duration-300"
+      class="inline-block bg-rhino hover:bg-white text-white hover:text-rhino text-lg md:text-xl font-bold py-2 px-6 rounded-full transition duration-300"
     >
       {buttonText}
     </a>
