--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,8 @@
 import Layout from "../layouts/Layout.astro";
 import HeroSection from "../components/sections/HeroSection.astro";
 import Feature from "../components/sections/Feature.astro";
-import CallToAction from '../components/sections/CallToAction.astro';
+import CallToAction from "../components/sections/CallToAction.astro";
+
 const {
   title = "Pioneering Sustainable Healthcare through AI & Telemedicine",
   description = "Mends is transforming healthcare with AI-driven solutions and telemedicine, focusing on accessibility, patient care, and sustainability. Discover how we're shaping the future of healthcare for a better tomorrow.",
@@ -18,7 +19,13 @@ const {
 } = Astro.props;
 ---
 
-<Layout title={title} image={image} description={description} lang={lang} navLinks={navLinks}>
+<Layout
+  title={title}
+  image={image}
+  description={description}
+  lang={lang}
+  navLinks={navLinks}
+>
   <HeroSection
     imageAlt="Transforming Healthcare"
     imageUrl="/images/launch_2909658.svg"
@@ -166,22 +173,13 @@ const {
       precedent for future-oriented, sustainable healthcare innovations.
     </span>
   </Feature>
-
-  <section class="bg-matisse text-white py-12 md:py-24">
-    <div class="container mx-auto px-4 text-center max-w-xl">
-      <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold mb-6">
-        Join the Healthcare Revolution
-      </h2>
-      <p class="text-lg md:text-xl mb-8">
-        Invest in a future where healthcare meets humanity. Partner with Mends
-        to make a lasting impact on global health.
-      </p>
-      <a
-        href="mailto:contact@mends.eu"
-        class="inline-block bg-rhino hover:bg-brandy text-white hover:text-rhino font-bold py-2 px-6 rounded-full transition duration-300"
-      >
-        Make an Impact
-      </a>
-    </div>
-  </section>
+  <CallToAction
+    id="cta-section"
+    buttonText="Make an Impact"
+    buttonLink="mailto:contact@mends.eu"
+  >
+    <div slot="header">Join the Healthcare Revolution</div>
+     Invest in a future where healthcare meets humanity. Partner with Mends to
+    make a lasting impact on global health.
+  </CallToAction>
 </Layout>
