--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import Layout from "../layouts/Layout.astro";
 import HeroSection from "../components/sections/HeroSection.astro";
 import Feature from "../components/sections/Feature.astro";
 import CallToAction from "../components/sections/CallToAction.astro";
+import LogoGrid from "../components/sections/LogoGrid.astro";
+import LogoElement from "../components/elements/LogoElement.astro";
 
 const {
   title = "Pioneering Sustainable Healthcare through AI & Telemedicine",
@@ -28,7 +30,7 @@ const {
 >
   <HeroSection
     imageAlt="Transforming Healthcare"
-    imageUrl="/images/launch_2909658.svg"
+    imageUrl="/images/landing/launch_2909658.svg"
     buttonText="Discover Our Vision"
     buttonLink="#values"
     id="home"
@@ -46,7 +48,7 @@ const {
 
   <Feature
     id="values"
-    imageUrl="/images/universe_2909502.svg"
+    imageUrl="/images/landing/universe_2909502.svg"
     imageAlt="Our Values"
   >
     <span slot="heading">
@@ -67,7 +69,7 @@ const {
 
   <Feature
     id="motivation"
-    imageUrl="/images/energy_4405428.svg"
+    imageUrl="/images/landing/energy_4405428.svg"
     imageAlt="Motivation"
     reverse
   >
@@ -88,9 +90,44 @@ const {
     </span>
   </Feature>
 
+  <LogoGrid>
+    <span slot="heading">Our Tech Stack</span>
+    <LogoElement
+      src="/images/logo_grid/chatwoot_logo.svg"
+      alt="Chatwoot"
+      href=""
+    />
+    <LogoElement src="/images/logo_grid/n8n_logo.svg" alt="n8n" href="" />
+    <LogoElement
+      src="/images/logo_grid/portainer_logo.svg"
+      alt="Portainer"
+      href=""
+    />
+    <LogoElement
+      src="/images/logo_grid/directus_logo.svg"
+      alt="Directus"
+      href=""
+    />
+    <LogoElement src="/images/logo_grid/hasura_logo.svg" alt="Hasura" href="" />
+    <LogoElement
+      src="/images/logo_grid/typebot_logo.svg"
+      alt="Typebot"
+      href=""
+    />
+  </LogoGrid>
+  
+  <CallToAction
+    id="cta-section"
+    buttonText="Make an Impact"
+    buttonLink="mailto:contact@mends.eu"
+  >
+    <span slot="header">Join the Healthcare Revolution</span>
+     Invest in a future where healthcare meets humanity. Partner with Mends to
+    make a lasting impact on global health.
+  </CallToAction>
   <Feature
     id="empathy"
-    imageUrl="/images/feedback_4342417.svg"
+    imageUrl="/images/landing/feedback_4342417.svg"
     imageAlt="Empathy"
   >
     <span slot="heading">
@@ -112,7 +149,7 @@ const {
 
   <Feature
     id="nimblesness"
-    imageUrl="/images/synchronization_1766998.svg"
+    imageUrl="/images/landing/synchronization_1766998.svg"
     imageAlt="Nimbleness"
     reverse
   >
@@ -134,7 +171,7 @@ const {
 
   <Feature
     id="diversity"
-    imageUrl="/images/puzzle_5417957.svg"
+    imageUrl="/images/landing/puzzle_5417957.svg"
     imageAlt="Diversity"
   >
     <span slot="heading">
@@ -154,7 +191,7 @@ const {
 
   <Feature
     id="sustainability"
-    imageUrl="/images/tag_4405535.svg"
+    imageUrl="/images/landing/tag_4405535.svg"
     imageAlt="Sustainability"
     reverse
   >
@@ -178,8 +215,9 @@ const {
     buttonText="Make an Impact"
     buttonLink="mailto:contact@mends.eu"
   >
-    <div slot="header">Join the Healthcare Revolution</div>
+    <span slot="header">Join the Healthcare Revolution</span>
      Invest in a future where healthcare meets humanity. Partner with Mends to
     make a lasting impact on global health.
   </CallToAction>
+
 </Layout>
