--- a/src/components/common/Head.astro
+++ b/src/components/common/Head.astro
@@ -35,10 +35,10 @@ const {
     description={description}
     openGraph={{
       basic: {
-		url: `"${url}"`,
-		type: `"${type}"`,
-        title: `"${title}"`,
-        image: `"${image}"`,
+		url: `${url}`,
+		type: `${type}`,
+        title: `${title}`,
+        image: `${image}`,
       },
     }}
     twitter={{
