--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import LogoElement from '../components/elements/LogoElement.astro';
 const {
 	title = 'Pioneering Sustainable Healthcare through AI & Telemedicine',
 	description = "Mends is transforming healthcare with AI-driven solutions and telemedicine, focusing on accessibility, patient care, and sustainability. Discover how we're shaping the future of healthcare for a better tomorrow.",
-  image = "/images/fallback/fallback_social.jpg",
+  image = "/images/fallback/fallback_social.jpeg",
 	navLinks = [
 		{ text: 'Motivation', href: '#motivation' },
 		{ text: 'Empathy', href: '#empathy' },
