--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -174,6 +174,7 @@ const {
 		<LogoElement src="/images/logo_grid/openai_logo.svg" alt="OpenAI" />
 		<LogoElement src="/images/logo_grid/google_cloud_logo.svg" alt="Google Cloud" />
 		<LogoElement src="/images/logo_grid/deepl_logo.svg" alt="DeepL" />
+		<LogoElement src="/images/logo_grid/docker_logo.svg" alt="Docker" />
 	</LogoGrid>
 
 	<Feature
