--- a/src/layouts/GenericLayout.astro
+++ b/src/layouts/GenericLayout.astro
@@ -7,18 +7,19 @@ import Navigation from '../components/common/Navigation.astro';
 import NavigationButton from '../components/common/NavigationButton.astro';
 
 interface LayoutProps {
-  title: string;
-  titleTemplate?: string;
-  titleDefault?: string;
-  description: string;
-  image: string;
-  lang: string;
-  type: string;
-  navLinks?: { text: string; href: string }[];
+	title: string;
+	titleTemplate?: string;
+	titleDefault?: string;
+	description: string;
+	image: string;
+	lang: string;
+	type: string;
+	navActive?: boolean;
+	navLinks?: { text: string; href: string }[];
 }
 
 const {
-  title = "Mends — Pioneering Sustainable Healthcare through AI & Telemedicine",
+  title = "Mends — Pioneering Sustainable Healthcare through AI & Telemedicine", // Provide a more meaningful default title if possible
   titleTemplate = "Mends — %s",
   titleDefault = "mends.eu — our's startup website",
   description = "Mends is transforming healthcare with AI-driven solutions and telemedicine, focusing on accessibility, patient care, and sustainability. Discover how we're shaping the future of healthcare for a better tomorrow.",
@@ -31,25 +32,24 @@ const {
 ---
 
 <html lang={lang}>
-  <Head title={title} titleTemplate={titleTemplate} titleDefault={titleDefault} image={image} type={type} description={description} />
-  <body
-    x-data="{ showNav: false, navStyle: '', updateNavStyle() { const mainContainer = this.$refs.mainContainer; if (mainContainer) { this.navStyle = `width: ${mainContainer.offsetWidth}px; height: ${mainContainer.offsetHeight}px; top: ${mainContainer.offsetTop}px; left: ${mainContainer.offsetLeft}px;`;}}}"
-    class="container mx-auto"
-    x-init="updateNavStyle()"
-    @resize.window="updateNavStyle()"
-  >
-    <div
-      class="h-full container w-full fixed grid grid-rows-[fit-content(100%)_1fr_fit-content(100%)] grid-cols-[1fr_auto] grid-flow-row gap-0 bg-white"
-    >
-      <Header svgClasses="h-[38px] md:h-[62px]">
-        <!-- Conditionally render NavigationButton and Navigation if navLinks is not empty -->
-        {navLinks.length > 0 && <NavigationButton svgClasses="h-[18px] md:h-[29px]" />}
-        {navLinks.length > 0 && <Navigation navLinks={navLinks} />}
-      </Header>
-      <Main>
-        <slot />
-      </Main>
-      <Footer />
-    </div>
-  </body>
+	<Head title={title} titleTemplate= {titleTemplate} titleDefault={titleDefault} image={image} type={type} description={description} />
+	<body
+		x-data="{ showNav: false, navStyle: '', updateNavStyle() { const mainContainer = this.$refs.mainContainer; if (mainContainer) { this.navStyle = `width: ${mainContainer.offsetWidth}px; height: ${mainContainer.offsetHeight}px; top: ${mainContainer.offsetTop}px; left: ${mainContainer.offsetLeft}px;`;}}}"
+		class="container mx-auto"
+		x-init="updateNavStyle()"
+		@resize.window="updateNavStyle()"
+	>
+		<div
+			class="h-full container w-full fixed grid grid-rows-[fit-content(100%)_1fr_fit-content(100%)] grid-cols-[1fr] grid-flow-row gap-0"
+		>
+			<Header svgClasses="h-[38px] md:h-[62px]">
+				{navLinks.length>0 && <NavigationButton svgClasses="h-[18px] md:h-[29px]" />}
+				{navLinks.length>0 && <Navigation navLinks={navLinks} />}
+			</Header>
+			<Main>
+				<slot />
+			</Main>
+			<Footer />
+		</div>
+	</body>
 </html>
