feat(CallToAction): make buttonLink prop optional and update buttonText in index page

--- a/src/components/sections/CallToAction.astro
+++ b/src/components/sections/CallToAction.astro
@@ -2,7 +2,7 @@
 interface Props {
   id: string;
   buttonText: string;
-  buttonLink: string;
+  buttonLink?: string;
 }
 
 const { id, buttonText, buttonLink } = Astro.props as Props;
