--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -108,8 +108,7 @@ const {
 
   <CallToAction
     id="invest-cta"
-    buttonText="Invest Now"
-    buttonLink="/investment-opportunities"
+    buttonText="Invest Now (soon)"
   >
     <span slot="header">Discover Investment Opportunities</span>
      Join us in shaping the future of healthcare. Explore investment
