feat(components): adjust responsive design and add new logo
This commit adjusts the responsive design of various components. It modifies the height of the LogoElement, changes the gap size in LogoGrid for medium devices, updates the font size and padding in ScrollingTextSection to be more responsive on different display sizes. In addition, it includes a new Postmark logo in the index file.

--- a/src/components/sections/ScrollingTextSection.astro
+++ b/src/components/sections/ScrollingTextSection.astro
@@ -10,7 +10,7 @@ const { duration = "60s", id } = Astro.props as Props; // Default to 30 seconds 
 <section id={id}
   x-data="{ shift: false }"
   @animationiteration.window="shift = !shift"
-  class="overflow-hidden whitespace-nowrap w-full flex text-6xl font font-bold bg-rhino leading-loose text-white"
+  class="overflow-hidden whitespace-nowrap w-full flex text-2xl md:text-3xl lg:text-4xl font font-bold bg-rhino leading-loose text-white py-2 md:py-4 lg:py-6 xl:py-8"
 >
   <!-- First group of text -->
   <div
