--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -165,6 +165,10 @@ const {
       src="/images/logo_grid/google_cloud_logo.svg"
       alt="Google Cloud"
     />
+    <LogoElement
+      src="/images/logo_grid/postmark_logo.svg"
+      alt="Postmark"
+    />
     <LogoElement src="/images/logo_grid/deepl_logo.svg" alt="DeepL" />
   </LogoGrid>
   <ScrollingTextSection id="opportunities" duration="120s">
