--- a/src/components/sections/LogoGrid.astro
+++ b/src/components/sections/LogoGrid.astro
@@ -9,7 +9,7 @@ const { id } = Astro.props;
   <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold mb-6 text-matisse">
     <slot name="heading" />
   </h2>
-  <div class="flex flex-wrap justify-center gap-6 md:gap-12 lg:gap-18">
+  <div class="flex flex-wrap justify-center gap-6 md:gap-12">
     <slot /> <!-- This will hold all the LogoElement components or other content -->
   </div>
 </section>
