--- a/src/components/sections/CallToAction.astro
+++ b/src/components/sections/CallToAction.astro
@@ -9,7 +9,7 @@ const { id, buttonText, buttonLink } = Astro.props as Props;
 ---
 
 <section
-  class="bg-matisse text-white py-12 md:py-24"
+  class="bg-matisse text-white py-12 md:py-24 m-12 rounded-xl shadow-xl"
   id={id}
 >
   <div class="container mx-auto px-4 text-center max-w-xl">
