--- a/src/components/sections/HeroSection.astro
+++ b/src/components/sections/HeroSection.astro
@@ -1,28 +1,45 @@
 ---
 // HeroSection.astro
 interface Props {
-	imageAlt?: string;
-	imageUrl?: string;
-	buttonText?: string;
-	buttonLink?: string;
+  imageAlt?: string;
+  imageUrl?: string;
+  buttonText?: string;
+  buttonLink?: string;
   id?: string;
 }
 const { imageAlt, imageUrl, buttonText, buttonLink, id } = Astro.props;
 ---
 
 <section
-	class="container mx-auto px-4 py-12 md:py-24 flex flex-wrap-reverse md:flex-wrap items-center md:min-h-full" id={id}
+  class="container mx-auto px-4 py-12 md:py-24 flex flex-wrap-reverse md:flex-wrap items-center md:min-h-full"
+  id={id}
 >
-	<div class="w-full md:w-1/2 flex justify-center mb-8 md:mb-0">
-		<img src={imageUrl} alt={imageAlt} loading="lazy" class="max-w-xs md:max-w-sm lg:max-w-md w-full h-full aspect-square px-6" />
-	</div>
-	<div class="w-full md:w-1/2 text-center md:text-left text-matisse max-w-xl pb-12 md:py-0">
-		<h1 class="text-3xl md:text-4xl lg:text-5xl font-bold mb-6"><slot name="header" /></h1>
-		<p class="text-xl md:text-2xl mb-8 text-rhino"><slot /></p>
-		<a
-			href={buttonLink}
-			class="inline-block bg-matisse text-white text-bold text-lg md:text-xl font-bold py-2 px-6 rounded-full hover:bg-apricot transition duration-300"
-			>{buttonText}</a
-		>
-	</div>
+  <div class="w-full md:w-1/2 flex justify-center mb-8 md:mb-0 relative">
+    <!-- Blurred Image as Background -->
+    <img
+      src={imageUrl}
+      alt=""
+      aria-hidden="true"
+      class="absolute max-w-xs md:max-w-sm lg:max-w-md w-full h-full aspect-square px-6 -z-10 blur-lg transform scale-105"
+    />
+    <!-- Original Image -->
+    <img
+      src={imageUrl}
+      alt={imageAlt}
+      class="max-w-xs md:max-w-sm lg:max-w-md w-full h-full aspect-square px-6 z-0"
+    />
+  </div>
+  <div
+    class="w-full md:w-1/2 text-center md:text-left text-matisse max-w-xl pb-12 md:py-0"
+  >
+    <h1 class="text-3xl md:text-4xl lg:text-5xl font-bold mb-6">
+      <slot name="header" />
+    </h1>
+    <p class="text-xl md:text-2xl mb-8 text-rhino"><slot /></p>
+    <a
+      href={buttonLink}
+      class="inline-block bg-matisse text-white text-bold text-lg md:text-xl font-bold py-2 px-6 rounded-full hover:bg-apricot transition duration-300"
+      >{buttonText}</a
+    >
+  </div>
 </section>
