--- a/src/components/sections/LogoGrid.astro
+++ b/src/components/sections/LogoGrid.astro
@@ -5,7 +5,7 @@ interface Props {
 const { id } = Astro.props;
 ---
 
-<section class="container mx-auto px-4 py-12 text-center bg-white" id={id}>
+<section class="container mx-auto px-4 py-12 text-center" id={id}>
   <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold mb-6 text-matisse">
     <slot name="heading" />
   </h2>
