feat(ui): improve navigation and main component visibility transitions
Update the Main and Navigation components to enhance user interaction. In the Main component, remove the opacity change when the navigation is shown. In the Navigation component, add detailed transition classes for entrance and exit animations. Also adjust styles for navigation links for better visual cues on hover.

--- a/src/components/common/Main.astro
+++ b/src/components/common/Main.astro
@@ -4,7 +4,7 @@
 
 <main
   class=" overflow-scroll shadow-2xl rounded-3xl no-scrollbar scroll-smooth"
-  :class="showNav ? 'opacity-0' : ''"
+  :class="showNav ? '' : ''"
   x-transition.opacity
   x-ref="mainContainer"
 >
