--- a/src/components/common/Main.astro
+++ b/src/components/common/Main.astro
@@ -3,7 +3,7 @@
 ---
 
 <main
-  class=" overflow-scroll shadow-2xl rounded-3xl no-scrollbar scroll-smooth transition-opacity"
+  class=" overflow-scroll shadow-2xl rounded-3xl no-scrollbar scroll-smooth transition-opacity bg-white"
   :class="showNav ? '' : ''"
   x-transition.opacity
   x-ref="mainContainer"
