--- a/src/components/common/Navigation.astro
+++ b/src/components/common/Navigation.astro
@@ -19,16 +19,16 @@ const navLinks: NavLink[] = Astro.props.navLinks;
   x-transition:leave-end="opacity-0 bg-opacity-0"
   @click="showNav = false"
   :style="navStyle"
-  :class="showNav ? '' : 'hidden'"
-  class="absolute z-20 overflow-auto px-10 rounded-3xl bg-hippie-blue h-auto bg-opacity-30 backdrop-blur-lg transition-all"
+  :class="showNav ? '' : ''"
+  class="absolute overflow-auto px-10 rounded-3xl bg-hippie-blue h-auto bg-opacity-30 backdrop-blur-lg transition-opacity no-scrollbar z-50"
 >
   <ul
-    class="flex grow-1 flex-col h-full w-full justify-center content-center gap-4 font-display"
+    class="flex grow-1 flex-col h-full w-full justify-center content-center gap-4"
   >
     {
       navLinks.map((link) => (
         <li class="justify-center flex">
-          <a class="py-6 px-12 text-center uppercase text-2xl text-rhino flex hover:bg-white hover:bg-opacity-30 rounded-full transition-colors w-fit" href={link.href}>
+          <a class="py-6 px-12 text-center font-bold uppercase text-xl md:text-2xl lg:text-3xl xl:text-4xl tracking-widest align-middle text-rhino flex hover:bg-white hover:bg-opacity-70 rounded-xl transition-colors w-fit" href={link.href}>
             {link.text}
           </a>
         </li>
