--- a/src/components/sections/FeatureSection.astro
+++ b/src/components/sections/FeatureSection.astro
@@ -22,7 +22,7 @@ const { id, imageUrl, imageAlt, reverse = false } = Astro.props as Props;
         <h2
           class="text-2xl md:text-3xl lg:text-4xl font-bold mb-4 text-matisse"
         >
-          <slot name="heading" />
+          <slot name="header" />
         </h2>
         <p class="text-lg md:text-xl text-rhino">
           <slot name="paragraph" />
