--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,13 @@
 ---
 import Layout from "../layouts/GenericLayout.astro";
 import HeroSection from "../components/sections/HeroSection.astro";
-import Feature from "../components/sections/Feature.astro";
-import CallToAction from "../components/sections/CallToAction.astro";
-import LogoGrid from "../components/sections/LogoGrid.astro";
+import Feature from "../components/sections/FeatureSection.astro";
+import CallToAction from "../components/sections/CallToActionSection.astro";
+import LogoGrid from "../components/sections/LogoSection.astro";
 import LogoElement from "../components/elements/LogoElement.astro";
 import ScrollingTextSection from "../components/sections/ScrollingTextSection.astro";
+import TestimonialSection from "../components/sections/TestimonialSection.astro";
+import TestimonialElement from "../components/elements/TestimonialElement.astro";
 
 const {
   title = "Pioneering Sustainable Healthcare through AI & Telemedicine",
@@ -52,7 +54,7 @@ const {
     imageUrl="/images/landing/universe_2909502.svg"
     imageAlt="Our Values"
   >
-    <span slot="heading">
+    <span slot="header">
       Our <span
         class="font-display uppercase text-transparent bg-gradient-to-b from-apricot via-brandy to-frost bg-clip-text"
         >Values</span
@@ -74,7 +76,7 @@ const {
     imageAlt="Motivation"
     reverse
   >
-    <span slot="heading">
+    <span slot="header">
       Fueling Innovation: The Power of <span
         class="font-display uppercase text-transparent bg-gradient-to-b from-matisse via-hippie-blue to-pale-leaf bg-clip-text"
         >Motivation</span
@@ -92,7 +94,7 @@ const {
   </Feature>
 
   <LogoGrid id="tech-stack">
-    <span slot="heading">Our Tech Stack</span>
+    <span slot="header">Our Tech Stack</span>
     <LogoElement src="/images/logo_grid/postgresql_logo.svg" alt="PostgreSQL" />
     <LogoElement src="/images/logo_grid/redis_logo.svg" alt="Redis" />
     <LogoElement src="/images/logo_grid/docker_logo.svg" alt="Docker" />
@@ -106,10 +108,7 @@ const {
     <LogoElement src="/images/logo_grid/plausible_logo.svg" alt="Plausible" />
   </LogoGrid>
 
-  <CallToAction
-    id="invest-cta"
-    buttonText="Invest Now (soon)"
-  >
+  <CallToAction id="invest-cta" buttonText="Invest Now (soon)">
     <span slot="header">Discover Investment Opportunities</span>
      Join us in shaping the future of healthcare. Explore investment
     opportunities with Mends and be part of the revolution.
@@ -119,7 +118,7 @@ const {
     imageUrl="/images/landing/feedback_4342417.svg"
     imageAlt="Empathy"
   >
-    <span slot="heading">
+    <span slot="header">
       <span
         class="font-display uppercase text-transparent bg-gradient-to-b from-apricot via-brandy to-frost bg-clip-text"
         >Empathy</span
@@ -142,7 +141,7 @@ const {
     imageAlt="Nimbleness"
     reverse
   >
-    <span slot="heading">
+    <span slot="header">
       Agility in Action: Embracing Change with <span
         class="font-display uppercase text-transparent bg-gradient-to-b from-matisse via-hippie-blue to-pale-leaf bg-clip-text"
         >Nimble</span
@@ -159,16 +158,13 @@ const {
   </Feature>
 
   <LogoGrid id="embedded-technologies">
-    <span slot="heading">Embedded Technologies</span>
+    <span slot="header">Embedded Technologies</span>
     <LogoElement src="/images/logo_grid/openai_logo.svg" alt="OpenAI" />
     <LogoElement
       src="/images/logo_grid/google_cloud_logo.svg"
       alt="Google Cloud"
     />
-    <LogoElement
-      src="/images/logo_grid/postmark_logo.svg"
-      alt="Postmark"
-    />
+    <LogoElement src="/images/logo_grid/postmark_logo.svg" alt="Postmark" />
     <LogoElement src="/images/logo_grid/deepl_logo.svg" alt="DeepL" />
   </LogoGrid>
   <ScrollingTextSection id="opportunities" duration="120s">
@@ -184,7 +180,7 @@ const {
     imageUrl="/images/landing/puzzle_5417957.svg"
     imageAlt="Diversity"
   >
-    <span slot="heading">
+    <span slot="header">
       Embracing <span
         class="font-display uppercase text-transparent bg-gradient-to-b from-apricot via-brandy to-frost bg-clip-text"
         >Diversity</span
@@ -205,7 +201,7 @@ const {
     imageAlt="Sustainability"
     reverse
   >
-    <span slot="heading">
+    <span slot="header">
       A Greener Future: Mends' Commitment to <span
         class="font-display uppercase text-transparent bg-gradient-to-b from-matisse via-hippie-blue to-pale-leaf bg-clip-text"
         >Sustainability</span
@@ -220,6 +216,71 @@ const {
       precedent for future-oriented, sustainable healthcare innovations.
     </span>
   </Feature>
+  <TestimonialSection id="testimonials">
+    <span slot="header">Nurturing Health</span>
+    <TestimonialElement
+      content="Complete professionalism. Willingness to help, understanding, quick response. I recommend."
+      signature="Aleksandra Urbaniak"
+      description="Recommended Polski Lekarz"
+      readOnUrl="https://www.facebook.com/aleksandra.urbaniak.1428/posts/pfbid026fpJ4PJt5V4LJcNNDcrjazSzxYs9gdNcTRFtNM7N1GhamvXC6jDGjXqLUUdum6Y5l"
+      readOnText="Read on Facebook"
+    />
+
+    <TestimonialElement
+      content="The online consultation I had with Mr. Dominik was of the highest standard. A factual approach to the subject and asking about all the details, as well as diagnosis and constant contact with me, was what I expected."
+      signature="Łukasz Falkowski"
+      description="Highly satisfied with Polski Lekarz"
+      readOnUrl="https://www.facebook.com/Felo.5.2.0/posts/pfbid02nu6AF9agratz81EQEeosDWG28NL2zU4QfJXXEPbddCxuNS9YV3chy3UDzAqB47iPl"
+      readOnText="Read on Facebook"
+    />
+
+    <TestimonialElement
+      content="I recommend Mr. Dominik for his approach and professionalism."
+      signature="Wiola Żebro"
+      description="Happy Client"
+      readOnUrl="https://www.facebook.com/wiola.janeczko/posts/pfbid0bXTjaFt6wEXmMeuanG5wNMaS6SQWhmEYzDDjeYYi6gV1G1aWhaGUAVUu2GskpX1tl"
+      readOnText="Read on Facebook"
+    />
+    <TestimonialElement
+      content="I highly recommend. Mr. Dominik is great at what he does and will answer every question. Again, I recommend 🙂"
+      signature="Daria Sudoł"
+      description="Satisfied Patient"
+      readOnUrl="https://www.facebook.com/AlurixX/posts/pfbid0CJMa7asBLLKFxzMsPa7LkcisoAAoRDZSthVC1s2qWp4zGSUxLg9JmNoMvqzcs9W6l"
+      readOnText="Read on Facebook"
+    />
+
+    <TestimonialElement
+      content="I highly recommend Dr. Dominik, a doctor with a calling, super approach to the patient, he explains everything clearly."
+      signature="Paulina Nickel"
+      description="Grateful Patient"
+      readOnUrl="https://www.facebook.com/malinka8137/posts/pfbid0aYLxNG9yPwGzWMK7y96yHhXtKVqEMRfCbjs4NjgPaWpJDLuy1adsVCnewR8GezYhl"
+      readOnText="Read on Facebook"
+    />
+    <TestimonialElement
+      content="I recommend Dr. Dominik, professional approach to the patient, quick help provided."
+      signature="Kornelia Rypała"
+      description="Satisfied Client"
+      readOnUrl="https://www.facebook.com/kornela32/posts/pfbid0YEZbsEF9z3RJ3amKzR2nEcqv2AHikt9uWXfXfZtuZtcxYx6L2gicw2Nu2P1Dc6tnl"
+      readOnText="Read on Facebook"
+    />
+    <TestimonialElement
+      content="Doctor Dominik approaches the patient very professionally. Full of commitment in what he does. Great contact, very nice conversation. I heartily recommend..."
+      signature="Agusia Turtoń"
+      description="Highly Recommended"
+      readOnUrl="https://www.facebook.com/agnieszka.turtonr/posts/pfbid0prZTtBHnhndKwxECg4Shhtex4hGoHHCXqqURHfmUYnZ3A7ZkcvekiuSQVy4PPze6l"
+      readOnText="Read on Facebook"
+    />
+    <TestimonialElement
+      content="Dr. Dominik is very kind and committed. He offers advice and help. I recommend contacting him in emergencies."
+      signature="Natalia Strzępek"
+      description="Emergency Consultation"
+      readOnUrl="https://www.facebook.com/natalia.strzepek.5/posts/pfbid02aSSrE6VyqNa5ttwHzArzUsaMG6doChu6dn2w4bBruDNNA84uTtwGayH8rmUQTvagl"
+      readOnText="Read on Facebook"
+    />
+  </TestimonialSection>
+
+  <!-- Add more TestimonialElement components as needed, following the same pattern -->
+
   <CallToAction
     id="contact-cta"
     buttonText="Contact Us"
