--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -217,6 +217,7 @@ const {
     </span>
   </Feature>
   <TestimonialSection id="testimonials">
+    <span slot="subheader">Founders' Passion Fuels Progress</span>
     <span slot="header">Nurturing Health</span>
     <TestimonialElement
       content="Complete professionalism. Willingness to help, understanding, quick response. I recommend."
@@ -276,6 +277,45 @@ const {
       description="Emergency Consultation"
       readOnUrl="https://www.facebook.com/natalia.strzepek.5/posts/pfbid02aSSrE6VyqNa5ttwHzArzUsaMG6doChu6dn2w4bBruDNNA84uTtwGayH8rmUQTvagl"
       readOnText="Read on Facebook"
+    />
+    <TestimonialElement
+      content="Received outstanding care from Dr. Dominik while abroad. His dedication and prompt assistance were truly beyond my expectations."
+      signature="Paulina"
+      description="Reliable care, globally available"
+      readOnUrl="https://www.znanylekarz.pl/dominik-mukrecki#o-4814619"
+      readOnText="Read on ZnanyLekarz"
+    />
+
+    <TestimonialElement
+      content="I recommend Dr. Dominik for his exceptional service. The cross-border prescription was easily fulfilled abroad, showcasing his commitment to patient care."
+      signature="P.S"
+      description="Seamless healthcare experience"
+      readOnUrl="https://www.znanylekarz.pl/dominik-mukrecki#o-4615571"
+      readOnText="Read on ZnanyLekarz"
+    />
+
+    <TestimonialElement
+      content="Professional, prompt, and effective; Dr. Dominik provided the urgent care I needed. His guidance and prescribed treatment were exactly what I was missing in the Netherlands."
+      signature="Klaudia S"
+      description="Immediate and effective care"
+      readOnUrl="https://www.znanylekarz.pl/dominik-mukrecki#o-4474086"
+      readOnText="Read on ZnanyLekarz"
+    />
+
+    <TestimonialElement
+      content="Efficient and thorough, Dr. Dominik is my go-to for reliable health consultations and prescriptions abroad."
+      signature="Violetta Verschuuren"
+      description="Expert care for expats"
+      readOnUrl="https://www.znanylekarz.pl/dominik-mukrecki#o-4354458"
+      readOnText="Read on ZnanyLekarz"
+    />
+
+    <TestimonialElement
+      content="Dr. Dominik's support is available when you most need it, providing prescriptions swiftly, even on weekends. Highly commendable service."
+      signature="Joanna K."
+      description="Reliable weekend support"
+      readOnUrl="https://www.znanylekarz.pl/dominik-mukrecki#o-4324130"
+      readOnText="Read on ZnanyLekarz"
     />
   </TestimonialSection>
 
