feat(UI): enhance LogoElement styling and add Tailwind CSS logo to index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -105,6 +105,7 @@ const {
     <LogoElement src="/images/logo_grid/typebot_logo.svg" alt="Typebot" />
     <LogoElement src="/images/logo_grid/directus_logo.svg" alt="Directus" />
     <LogoElement src="/images/logo_grid/astro_logo.svg" alt="Astro" />
+    <LogoElement src="/images/logo_grid/tailwindcss_logo.svg" alt="Tailwind CSS" />
     <LogoElement src="/images/logo_grid/plausible_logo.svg" alt="Plausible" />
   </LogoGrid>
 
